src/scss/abstracts/_mixins.scss
// Mixins.

// Maintain aspect ratio of a container
@mixin aspect-ratio($width, $height) {
	position: relative;

	&::before {
		content: " ";
		display: block;
		padding-top: ($height / $width) * 100%;
		width: 100%;
	}

	> .content {
		bottom: 0;
		left: 0;
		margin: 0;
		position: absolute;
		right: 0;
		top: 0;
	}

	&:empty::before {
		padding-top: 0;
	}
}

// The general css for tags
@mixin tags() {
	display: flex;
	flex-wrap: wrap;

	a {
		background-color: $gold-light;
		border-radius: rem(20);
		box-shadow: 0 0 0 rem(1) transparent inset;
		color: $blue-alt-dark;
		font-weight: $font-weight-bold;
		margin: rem(8) rem(16) rem(8) 0;
		padding: rem(5) rem(16);

		&:focus,
		&:hover {
			box-shadow: 0 0 0 rem(1) $blue-alt inset;
		}
	}
}

// To adapt to UIO contrast themes
@mixin adapt-to-uioThemes($fColor, $bColor) {
	// Customized colors
	--currentColor: currentColor;
	--bColor: #{$bColor};
	--fColor: #{$fColor};

	// WeCount logo
	.logo circle,
	.logo path {
		fill: none;
		stroke: var(--fColor, currentColor);
		stroke-linecap: round;
		stroke-width: rem(3);
	}

	// Placeholder images on the "views" page
	svg.placeholder-img use {
		stroke: var(--fColor, currentColor);
		stroke-linecap: round;
		stroke-width: rem(3);
	}

	// Filter
	.filter {
		.filter-checkbox {
			// Box
			& + label::before,
			& + span::before {
				outline: rem(1) solid $fColor;
			}

			// Checkmark
			&:checked + label::after,
			&:checked + span::after {
				color: $bColor;
			}
		}

		// "Expand filter" button
		.filter-expand-button {
			--expand-button-color: #{$bColor};
			--expand-button-stroke-color: #{$fColor};

			background-color: #{$bColor} !important;

			svg {
				background-color: #{$bColor} !important;
			}

			&:focus,
			&:hover {
				--expand-button-color: #{$fColor};
				--expand-button-stroke-color: #{$bColor};
			}
		}

		// Apply and reset buttons
		.filter-buttons {
			background-color: $grey-lighter;
		}
	}

	// Custom styles when "enhance inputs" is enabled
	&.fl-input-enhanced .filter-checkbox + label::before,
	&.fl-input-enhanced .filter-checkbox + span::before {
		outline: rem(3) double $fColor;
	}

	// Box checked
	.filter .filter-checkbox:checked + label::before,
	.filter .filter-checkbox:checked + span::before {
		background: $fColor;
	}

	// Box focus
	.filter .filter-checkbox:focus + label::before,
	.filter .filter-checkbox:hover + label::before,
	.filter .filter-checkbox:focus + span::before,
	.filter .filter-checkbox:hover + span::before {
		outline: rem(2.5) solid $fColor;
	}

	// Box focus when "enhance inputs" is enabled
	&.fl-input-enhanced .filter-checkbox:focus + label::before,
	&.fl-input-enhanced .filter-checkbox:hover + label::before,
	&.fl-input-enhanced .filter-checkbox:focus + span::before,
	&.fl-input-enhanced .filter-checkbox:hover + span::before {
		border: rem(2.5) solid $fColor;
		outline: rem(3.5) double $fColor;
	}

	// Box checked and focus/hover
	.filter .filter-checkbox:checked:focus + label::before,
	.filter .filter-checkbox:checked:hover + label::before,
	.filter .filter-checkbox:checked:focus + span::before,
	.filter .filter-checkbox:checked:hover + span::before {
		outline: rem(3) double $fColor;
	}

	// Box checked and focus/hover when "enhance inputs" is enabled
	&.fl-input-enhanced .filter-checkbox:checked:focus + label::before,
	&.fl-input-enhanced .filter-checkbox:checked:hover + label::before,
	&.fl-input-enhanced .filter-checkbox:checked:focus + span::before,
	&.fl-input-enhanced .filter-checkbox:checked:hover + span::before {
		border: rem(1) solid $bColor;
		box-shadow: 0 0 0 rem(1) $fColor inset;
		outline: rem(3) double $fColor;
	}

	// Tags
	.tags {
		a,
		p {
			box-shadow: 0 0 0 rem(1) currentColor inset;
		}

		a:focus,
		a:hover {
			box-shadow: 0 0 0 rem(2) currentColor inset;
		}
	}

	// Tile item
	.tile-item {
		box-shadow: rem(0) rem(0) rem(7) currentColor;

		&:hover {
			box-shadow: 0 0 rem(35) currentColor;
		}
	}

	// Initiative Page
	.disabled-element,
	.submitted-comment {
		opacity: 0.7;
	}

	// Focus/hover styles for SVGs on the footer
	footer .footer-content {
		// Logos on the footer
		.funders a,
		.footer-logos a {
			padding: rem(5);
		}

		// Social media icons
		.social-media .social-media-icons a {
			svg path {
				fill: currentColor;
				stroke: $bColor;
			}

			&:hover,
			&:focus {
				svg path {
					fill: $bColor;
					stroke: currentColor;
				}
			}
		}
	}

	// Side Menu
	#defaultContainer aside nav ul {
		box-shadow: rem(1) 0 0 0 currentColor inset;

		li {
			box-shadow: rem(1) 0 0 0 currentColor inset;

			&:active {
				box-shadow: rem(5) 0 0 0 currentColor inset;
			}
		}

		li.active {
			box-shadow: rem(5) 0 0 0 currentColor inset;
		}
	}

	// Styles for buttons
	.wp-block-file__button {
		box-shadow: 0 0 0 rem(1) currentColor inset;
	}

	// Focus/hover styles for links
	#defaultContainer a:focus,
	#defaultContainer a:hover,
	#defaultContainer header .site-nav-wrapper .site-nav nav a:focus,
	#defaultContainer header .site-nav-wrapper .site-nav nav a:hover,
	.search-container input,
	button:not(.filter-expand-button):focus,
	button:not(.filter-expand-button):hover,
	// The "post a comment" button on the Initiative page
	#comment-form button,
	#comment-form button::before,
	li .pagination-link,
	li .pagination-link::before,
	.wp-block-file__button:focus,
	.wp-block-file__button:hover {
		box-shadow: 0 0 0 rem(2) currentColor inset;
	}

	#defaultContainer {
		// UIO buttons
		.fl-prefsEditor-buttons button {
			padding-left: rem(3);
			padding-right: rem(3);
		}

		// Pagination on the contrast theme: previous, next, current page
		.content-wrapper main .pagination .pagination-list {
			.pagination-next,
			.pagination-previous,
			li a[aria-current="page"]::before {
				box-shadow: none;
			}
		}

		.content-wrapper main .pagination .pagination-list li a[aria-current="page"] {
			background-color: $fColor !important; // Enactors.css in infusion uses !important on this element
			box-shadow: none;
			color: $bColor !important; // Enactors.css in infusion uses !important on this element
			&:hover,
			&:focus {
				box-shadow:
					0 0 0 rem(4) $bColor,
					0 0 0 rem(6) $fColor;
			}
		}

		// Home page cards: hide background images and adjust box shadows on UIO contrast themes
		.card {
			background-image: none;
			box-shadow: 0 rem(4) rem(4) currentColor;

			&:focus,
			&:hover {
				box-shadow: rem(10) rem(10) rem(10) currentColor;
			}
		}

		// Advisory panel page
		.advisory-panel > .api-content > .wp-block-group > .wp-block-group__inner-container > .wp-block-group > .wp-block-group__inner-container > .wp-block-group {
			box-shadow: rem(0) rem(0) rem(7) currentColor;
		}
	}

	// The search container on the "Views" page
	.views .search-container {
		svg {
			fill: currentColor;
		}

		input[type="search"] {
			border: none;
		}

		::placeholder {
			color: $fColor;
		}
	}

	// The search icon on the header
	header .site-nav-wrapper .site-nav .search-container svg {
		fill: currentColor;
		height: rem(19.2);
		margin: rem(-25.6);
		width: rem(19.2);
	}

	// Outlines for the main Search input and Subscribe button
	header .search-container input[type="search"],
	footer .footer-content .subscribe a {
		border-style: solid;
		border-width: rem(2);
	}

	// Hide ellipsis when a post excerpt is fully displayed
	.news-grid .api-content .news-item .preview-content::after {
		background: $bColor;
	}

	// Resources page: adjust outlines of topic tiles; hide SVGs on topic tiles
	.resources {
		.search-container {
			input {
				box-shadow: 0 0 0.4375rem currentColor;
			}

			svg {
				fill: currentColor;
			}
		}

		.filter .topic-choices li {
			.topic-title {
				border: 1px solid $fColor;
				display: block;

				svg {
					display: none;
				}
			}
		}
	}

	// UIO table of content
	.flc-toc-tocContainer ul li::before {
		color: $fColor;
	}

	@include breakpoint-up(lg) {
		// Adjust the position of the search icon on the header
		header .site-nav-wrapper .site-nav .search-container svg {
			height: rem(24);
			margin: rem(-40);
			width: rem(24);
		}
	}
}

